@@ -528,6 +528,7 @@ enum AVCodecID {
     AV_CODEC_ID_MSNSIREN,
     AV_CODEC_ID_DFPWM,
     AV_CODEC_ID_BONK,
+    AV_CODEC_ID_MISC4,
 
     /* subtitle codecs */
     AV_CODEC_ID_FIRST_SUBTITLE = 0x17000,          ///< A dummy ID pointing at the start of subtitle codecs.
